Work in progress hooking up a modern view.

--- a/styles/ide-swift.less
+++ b/styles/ide-swift.less
@@ -10,6 +10,21 @@
 // for a full listing of what's available.
 
 @import "ui-variables";
+@import "octicon-mixins";
 
 .ide-swift {
+}
+
+.panel-body {
+    position: relative;
+}
+
+.command-output {
+    background-color: transparent;
+    position: absolute;
+    right: 10px;
+    left: 10px;
+    top: 10px;
+    bottom: 10px;
+    overflow: auto;
 }
