Console is scrollable.

--- a/styles/ide-swift.less
+++ b/styles/ide-swift.less
@@ -13,18 +13,6 @@
 @import "octicon-mixins";
 
 .ide-swift {
-}
-
-.panel-body {
-    position: relative;
-}
-
-.command-output {
     background-color: transparent;
-    position: absolute;
-    right: 10px;
-    left: 10px;
-    top: 10px;
-    bottom: 10px;
-    overflow: auto;
+    overflow: scroll;
 }
